--- a/Photos.html
+++ b/Photos.html
@@ -10,7 +10,7 @@
 <img src="me.JPG" width="350">
 
 
-<p>Currently enrolled in the University of Maine for Business Marketing, my passion is advertisement and social media marketing. I am apart of a social media marketing company right now where I produce and create my own content to post and advertise for a company. I directly handle all sales and customer service directly through my phone. <p></p>
+<p>Currently enrolled in the University of Maine for Business Marketing, my passion is advertisement and social media marketing. I am apart of a social media marketing company right now where I produce and create my own content to post and advertise for a company. I handle all sales and customer service directly through my phone. <p></p>
 <body style="background-color:lightsalmon;">
 
 </body>
